@@ -3,6 +3,7 @@ This this the changelog file for the Pothos GUI toolkit.
 Release 0.5.0 (pending)
 ==========================
 
+- Added automatic activate option for saved topologies
 - Require 0.5.0 Pothos framework for DocUtil and BlockEval
 - Switch over to Qt classes for JSON, time, processes, etc...
 - Parameter edit mode to switch between default and line entry
